<resources>
    <string name="app_name">HelloCharts</string>
    <string name="basic">basic</string>
    <string name="LineChartsBarName">Line Charts</string>
    <string name="line">line</string>
    <string name="ColumnChartBarName">Column Chart</string>
    <string name="ColumnChartSupportChart">柱状图：包含柱状图、立体图</string>
    <string name="column">column</string>
    <string name="column_reset">重置</string>
    <string name="column_subcolumn">子列</string>
    <string name="column_negative_column">反向子列</string>
    <string name="column_subcolumn_stack">堆放效果</string>
    <string name="column_negative_stack">反向堆放效果</string>
    <string name="column_show_label">显示/隐藏列标签</string>
    <string name="column_show_axis_name">显示/隐藏坐标轴名称</string>
    <string name="column_column_show_axis">显示/隐藏坐标轴</string>
    <string name="column_animation">切换动画</string>
    <string name="column_show_column_label">点击显示标签</string>
    <string name="column_touch_zoom">伸缩图表</string>
    <string name="column_touch_zoom_xy">XY方向伸缩</string>
    <string name="column_touch_zoom_x">X方向伸缩</string>
    <string name="column_touch_zoom_y">Y方向伸缩</string>
    <string name="pie">pie</string>
    <string name="PieChartBarName">Pie Chart</string>
    <string name="PieChartSupportChart">饼状图：包括饼状图、环形图</string>
    <string name="pie_reset">重置</string>
    <string name="pie_explode">块分解/紧靠</string>
    <string name="pie_circle">空心圆环</string>
    <string name="pie_circle_single_text">环形单行文字</string>
    <string name="pie_circle_double_text">环形双行文字</string>
    <string name="pie_inside_label">内部显示/隐藏标签</string>
    <string name="pie_outside_label">外部显示/隐藏标签</string>
    <string name="pie_animation">切换动画</string>
    <string name="pie_show_label">点击显示标签</string>
    <string name="BubbleChartBarName">Bubble Chart</string>
    <string name="BubbleChartSupportChart">气泡图：类似散点图</string>
    <string name="bubble">bubble</string>
    <string name="bubble_reset">重置</string>
    <string name="bubble_style_circle">圆形气泡</string>
    <string name="bubble_style_tangle">方形气泡</string>
    <string name="bubble_show_label">显示/隐藏气泡标签</string>
    <string name="bubble_show_axis">显示/隐藏坐标轴</string>
    <string name="bubble_show_axis_name">显示/隐藏坐标轴名称</string>
    <string name="bubble_dynamic">切换动画</string>
    <string name="bubble_click_show_label">点击气泡显示标签</string>
    <string name="bubble_zoom">伸缩图表</string>
    <string name="bubble_zoom_XY">XY方向伸缩</string>
    <string name="bubble_zoom_X">X方向伸缩</string>
    <string name="bubble_zoom_Y">Y方向伸缩</string>
    <string name="usage">usage</string>
    <string name="exchange">汇率</string>
</resources>