<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_bubble_reset"
        android:title="@string/bubble_reset"
        app:showAsAction="never"/>
    <item
        android:id="@+id/menu_bubble_style_circle"
        android:title="@string/bubble_style_circle"
        app:showAsAction="never"/>
    <item
        android:id="@+id/menu_bubble_style_tangle"
        android:title="@string/bubble_style_tangle"
        app:showAsAction="never"/>
    <item
        android:id="@+id/menu_bubble_show_label"
        android:title="@string/bubble_show_label"
        app:showAsAction="never"/>
    <item
        android:id="@+id/menu_bubble_show_axis"
        android:title="@string/bubble_show_axis"
        app:showAsAction="never"/>
    <item
        android:id="@+id/menu_bubble_show_axis_name"
        android:title="@string/bubble_show_axis_name"
        app:showAsAction="never"/>
    <item
        android:id="@+id/menu_bubble_dynamic"
        android:title="@string/bubble_dynamic"
        app:showAsAction="never"/>
    <item
        android:id="@+id/menu_bubble_click_show_label"
        android:title="@string/bubble_click_show_label"
        app:showAsAction="never"/>
    <item
        android:id="@+id/menu_bubble_zoom"
        android:title="@string/bubble_zoom"
        app:showAsAction="never"/>
    <item
        android:id="@+id/menu_bubble_zoom_XY"
        android:title="@string/bubble_zoom_XY"
        app:showAsAction="never"/>
    <item
        android:id="@+id/menu_bubble_zoom_X"
        android:title="@string/bubble_zoom_X"
        app:showAsAction="never"/>
    <item
        android:id="@+id/menu_bubble_zoom_Y"
        android:title="@string/bubble_zoom_Y"
        app:showAsAction="never"/>

</menu>