<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_column_reset"
        android:title="@string/column_reset"
        app:showAsAction="never"/>
    <item
        android:id="@+id/menu_column_subcolumn"
        android:title="@string/column_subcolumn"
        app:showAsAction="never"/>
    <item
        android:id="@+id/menu_column_negative_subcolumn"
        android:title="@string/column_negative_column"
        app:showAsAction="never"/>
    <item
        android:id="@+id/menu_column_stack"
        android:title="@string/column_subcolumn_stack"
        app:showAsAction="never"/>
    <item
        android:id="@+id/menu_column_negative_stack"
        android:title="@string/column_negative_stack"
        app:showAsAction="never"/>
    <item
        android:id="@+id/menu_column_show_label"
        android:title="@string/column_show_label"
        app:showAsAction="never"/>
    <item
        android:id="@+id/menu_column_show_axis"
        android:title="@string/column_column_show_axis"
        app:showAsAction="never"/>
    <item
        android:id="@+id/menu_column_show_axis_name"
        android:title="@string/column_show_axis_name"
        app:showAsAction="never"/>
</menu>