<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:foreground="?android:attr/selectableItemBackground"
    app:cardCornerRadius="6dp"
    app:cardElevation="6dp"
    android:id="@+id/cv_column_chart"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">
            <ImageView
                android:id="@+id/iv_column_chart"
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:layout_centerInParent="true"
                android:src="@mipmap/icon_column"
                android:scaleType="centerCrop"
                android:transitionName="@string/column"/>
        </RelativeLayout>
        <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/ColumnChartBarName"
                    android:textColor="#000000"
                    android:textSize="20sp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/ColumnChartSupportChart"
                    android:textColor="#555555"
                    android:textSize="16sp"/>
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>